--- a/frontend/flowgrid-fronted/package.json
+++ b/frontend/flowgrid-fronted/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.23.1",
+    "dotenv": "^16.6.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
